--- a/templates/core/spamsubmission.html
+++ b/templates/core/spamsubmission.html
@@ -1,8 +1,33 @@
+{% load static %}
 <html>
     <head>
-        <title>first page</title>
+        <meta charset="utf-8">
+        <meta name="author" content="Kurian Benoy">
+        <title>Home</title>
+        <link rel="stylesheet" href="{% static 'css/materialize.css' %}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        hello 
+
+      <nav>
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo center">SPAM /HAM WebApp</a>
+          <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <li><a href="sass.html">Home</a></li>
+            <li><a href="badges.html">Components</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="centore">
+
+          <div class="row">
+
+          </div>
+      </div
+
     </body>
 </html>
