--- a/templates/core/spamsubmission.html
+++ b/templates/core/spamsubmission.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load widget_tweaks %}
 <html>
     <head>
         <meta charset="utf-8">
@@ -22,15 +23,14 @@
       </nav>
 
           <div class="row">
-                  <form enctype="multipart/form-data"  class="col s5 " method="post" > 
-                  {% csrf_token %}
-
-                            <h2>Enter the Text</h2>
+                  <form   method="post" > 
+                    {% csrf_token %}
+                        <h2>Enter the Text</h2>
                           <br>
                         {{ form.inputtext }}
                         <br>
                         <br>
-                        <button type="submit" class ="save btn btn-default">Submit</button>
+                        <button type="submit" class ="btn btn-success">Submit</button>
                 </form>
 
           </div>
