--- a/templates/core/spamsubmission.html
+++ b/templates/core/spamsubmission.html
@@ -11,7 +11,7 @@
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body>
+    <body background="{% static 'images/maxresdefault.jpg' %}">
 
       <nav>
         <div class="nav-wrapper">
@@ -33,15 +33,13 @@
                           {{ hidden }}
                         {% endfor %}
 
-                        {% for field in form.visible_fields %}
                           <div class="form-group">
-                            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                            {{ field|add_class:'form-control' }}
-                            {% for error in field.errors %}
+                            <label for="{{ form.inputtext.id_for_label }}">{{ form.inputtext.label }}</label>
+                            {{ form.inputtext|add_class:'form-control' }}
+                            {% for error in form.inputtext.errors %}
                               <span class="help-block">{{ error }}</span>
                             {% endfor %}
                           </div>
-                        {% endfor %}
                         <br>
 
                        <center><button type="submit" class ="btn btn-success">Submit</button></center>
