--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,8 +2,37 @@ li {
     display: inline;
 }
 
-spamform {
-	height: 500px;
-	width: 400px;
+body{
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.centralize{
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.box{
 	position: absolute;
+	bottom: 25%;
+	left: 41%;
+	width: 18%;
+	height: 18%;
+	font-size: 3em;
+	background-color: white;
+	border: 5px solid green;
+	box-shadow: 2px 2px 2px 2px black;
+
+}
+
+.falign{
+	width:100px;
+	height: 200px;
+
 }
