--- a/templates/core/spamsubmission.html
+++ b/templates/core/spamsubmission.html
@@ -7,11 +7,12 @@
         <title>Home</title>
         <link rel="stylesheet" href="{% static 'css/materialize.css' %}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body background="{% static 'images/spam-email_2.jpg' %}">
+    <body background="{% static 'images/spam-email.jpg' %}">
 
       <nav>
         <div class="nav-wrapper">
@@ -24,43 +25,41 @@
 
 
 
-          <div class="row justify-content-center">
-                  <form  class="col s4 offset-s3" method="post" > 
+          <div class="row justify-content-center centralize">
+                  <form method="post" > 
                     {% csrf_token %}
-                        <h2>Enter the Message</h2>
+                        <h2 class="text-center">Enter the Message</h2>
                           <br>
                         {% for hidden in form.hidden_fields %}
                           {{ hidden }}
                         {% endfor %}
 
-                        <div class="col s7">
-                          <div class="form-group">
-                            <label for="{{ form.inputtext.id_for_label }}">{{ form.inputtext.label }}</label>
-                            {{ form.inputtext|add_class:'form-control' }}
-                            {% for error in form.inputtext.errors %}
-                              <span class="help-block">{{ error }}</span>
-                            {% endfor %}
-                          </div>
-                        <br>
+                        <div>
+                            <div class="form-group">
+                                <label for="{{ form.inputtext.id_for_label }}">{{ form.inputtext.label }}</label>
+                                    {{ form.inputtext|add_class:'falign' }}
 
+                                    {% for error in form.inputtext.errors %}
+                                        <span class="help-block">{{ error }}</span>
+                                    {% endfor %}
+                           </div>
+                        <br>
                        <center><button type="submit" class ="btn btn-success">Submit</button></center>
                       </div>
 
                 </form>
+          </div>
+           <div class="box">
+                    <!-- {{ predict }} -->
+
+                    {% if predict == 0 %}
+                      HAM
+                    {% endif %}
+
+                    {% if predict == 1 %}
+                    SPAM
+                    {% endif %}
 
           </div>
-
-        <div class="row justify-content-center">
-            {{ predict }}
-
-            {% if predict == 0 %}
-              HAM
-            {% endif %}
-
-            {% if predict == 1 %}
-            SPAM
-            {% endif %}
-
-        </div>
     </body>
 </html>
