--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,27 +3,32 @@ li {
 }
 
 body{
+	background-color: rgb(46, 47, 48);
 	background-repeat: no-repeat;
 	background-size: cover;
+
 }
 
 .centralize{
-    width: 500px;
-    height: 500px;
+	border-radius: 20px;
+    width: 1000px;
+    height: 450px;
     position: absolute;
     top:0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
+    box-shadow: 5px 5px 5px 5px;
+
 }
 
 .box{
 	position: absolute;
-	bottom: 25%;
+	bottom: 8%;
 	left: 41%;
 	width: 18%;
-	height: 18%;
+	height: 10%;
 	font-size: 3em;
 	background-color: white;
 	border: 5px solid green;
@@ -32,7 +37,10 @@ body{
 }
 
 .falign{
-	width:100px;
-	height: 200px;
+	width:900px;
+	height: 250px;
+	background-color: white;
+	font-size: 2em;
+	font-family: arial;
 
 }
