Better than ever

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@ li {
 }
 
 body{
-	background-color: rgb(46, 47, 48);
+	background-color: #848689;
 	background-repeat: no-repeat;
 	background-size: cover;
 
