--- a/templates/core/spamsubmission.html
+++ b/templates/core/spamsubmission.html
@@ -14,7 +14,7 @@
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body background="{% static 'images/spam-email.jpg' %}" >
+    <body  >
 
       <nav>
         <div class="nav-wrapper #607d8b blue-grey">
@@ -33,7 +33,7 @@
           
                           <br>
                         <i class="material-icons">report_problem</i>
-                         <center><h3> Enter Message </h3></center>
+                         <center><h3 style="color:white"> Enter Message </h3></center>
                         {% for hidden in form.hidden_fields %}
                           {{ hidden }}
                         {% endfor %}
